# qontinui

./: .editorconfig  .flake8  .gitattributes  .gitignore  .pre-commit-config-quality.yaml  .pre-commit-config.yaml  CI_CD_SETUP_SUMMARY.md  CLAUDE.md  CLI_TOOL_SUMMARY.md  CONTRIBUTING.md  JSON_EXECUTOR_README.md  LICENSE  QUALITY_GATES_README.md  QUICK_START_CLI.md  README.md  __init__.py  pyproject.toml  requirements.txt  run_json.py  test_composite_actions.py  test_core_functionality.py  test_direct_imports.py  test_final_integration.py  test_hybrid_final.py  test_hybrid_integration.py  test_hybrid_simple.py  test_json_executor.py  test_migration_setup.py  test_new_element_classes.py  test_phase2_classes.py  test_phase3_classes.py  test_phase4_classes.py  test_phase4_direct.py  test_phase5_implementation.py  test_refactoring.py  test_transition_decorators_simple.py  tox.ini  verify_registry_coverage.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  comprehensive-analysis.yml  docs.yml  eval-desktop.yml  qontinui-ci.yml  quality-checks.yml
.qontinui/: config.yml
.quality-baselines/: circular_deps.json  god_classes.json
benchmarks/: README.md  USAGE_EXAMPLES.md  __init__.py  benchmark_aria_ui_vs_uitars.py  benchmark_config_loading.py  benchmark_export_import.py  benchmark_image_finding.py  benchmark_threading.py  benchmark_workflow_execution.py  check_regression.py  results_aria_ui_vs_uitars.json  run_all_benchmarks.py
ci-templates/: INDEX.md  MIGRATION.md  QUICKSTART.md  README.md
ci-templates/examples/: ci-test-config.json  nightly-full-config.json  visual-regression-config.json
ci-templates/github-actions/: qontinui-nightly.yml  qontinui-test-with-streaming.yml  qontinui-test.yml  qontinui-visual-regression.yml
discovery/: README.md  __init__.py  background_removal.py  deletion_manager.py  models.py  pixel_stability_analyzer.py  pixel_stability_matrix_analyzer.py
docker/ai-proxy/: Caddyfile  README.md  docker-compose.yml
docker/aria-ui/: Dockerfile  docker-compose.yml  serve.py
docker/eval-desktop/: Dockerfile  apps.list  entrypoint.sh
docker/gemma-server/: README.md  docker-compose.yml
docker/llama-swap/: Dockerfile  README.md  config.yaml  docker-compose.yml
docker/omniparser/: Dockerfile  docker-compose.yml  server.py
docker/paddleocr/: Dockerfile  README.md  serve.py
docs/: .nojekyll  README.md  SCHEDULER_USER_GUIDE.md  SECURITY.md  SECURITY_AUDIT.md  architecture.md  conf.py  index.rst  migration-guide.md  patterns.md  scheduler_guide.md
docs/api/: README_SCHEMA_DOCS.txt  SCHEMA_ANALYSIS_SUMMARY.md  SCHEMA_DOCUMENTATION_INDEX.md  SCHEMA_QUICK_REFERENCE.md  SCHEMA_REFERENCE.md  index.rst
docs/architecture/: EVENT_SYSTEM_DESIGN.md  STATE_LOADING_PLAN.md  architecture.md  ci_cd_flow.md  hal_di_performance.md  patterns.md  persistence_architecture.md  workflow_orchestrator_design.md
docs/examples/: hal_initialization_example.py
docs/guides/: CI_CD_INTEGRATION.md  MIGRATION_HAL_DI.md  hal_di_testing.md
examples/: checkpoint_example.py  connection_routing_examples.py  control_flow_break_continue.py  control_flow_example.py  coordinates_example.py  data_operations_example.py  debugging_example.py  enhanced_states_example.py  enhanced_states_example_fixed.py  hybrid_translation_example.py  merge_examples.py  ocr_name_generator_demo.py  rag_text_embeddings_example.py  scheduler_example.json  simple_automation.json  success_criteria_example.py  test_hybrid_extraction.py  transition_set_example.py  visibility_states_example.tsx
hybrid_test_output/: extraction_results.json  test_page.html
schemas/: README.md  qontinui-schemas.json
scripts/: benchmark_extraction.py  demo_llm_selector.py  export_schemas.py  fix_imports.py  quality_gates.py  regenerate_vision_corpus.py  test_real_llm_selector.py  validate_dom_extraction.py
scripts/examples/: README.md  accessibility_audit_example.py  element_healing_example.py  form_filling_example.py  web_scraping_example.py
src/qontinui/: __init__.py  _ml_deps.py  action_exceptions.py  base_exceptions.py  config_exceptions.py  exceptions.py  hardware_exceptions.py  navigation_api.py  registry.py  state_exceptions.py  state_execution_api.py  storage_ai_exceptions.py  vision_exceptions.py
tauri_test_output/: extraction_results.json
test_venv/: pyvenv.cfg
tests/: __init__.py  _env_probe.py  conftest.py  manual_test_workflows.py  test_action_system.py  test_ast_scanner.py  test_checkpointing.py  test_code_executor_ast_integration.py  test_event_reporting.py  test_fingerprint_hash_consistency.py  test_imports.py  test_integration_new_schema.py  test_keys.py  test_mask_operations.py  test_masked_matching.py  test_multi_image_find.py  test_multistate_integration.py  test_navigation_api_loading.py  test_new_action_integration.py  test_process_repetition_integration.py  test_run_process.py  test_semantic_discovery.py  test_transitions.py  test_vga_canonical_parity.py  test_vga_shadow_log.py  test_vga_worker_recorder.py  test_websocket_event_integration.py  test_workflow_collections.json  test_workflow_if.json  test_workflow_loop.json  test_workflow_nested.json  test_workflow_variables.json
tests/action_executors/: test_accessibility_action.py
tests/actions/: __init__.py  test_action_result_threading.py  test_control_flow.py  test_highlight_action.py  test_pure_fluent.py
tests/annotations/: __init__.py  test_state_registry_threading.py
tests/awas/: __init__.py  conftest.py  test_discovery.py  test_executor.py  test_extractor.py  test_integration.py  test_types.py
tests/cache/: test_action_cache.py
tests/cli/: __init__.py  test_cli_basic.py  test_formatters.py
tests/config/: test_initial_states.py  test_json_config_validation.py  test_workflow_graph_format.py
tests/coordinates/: README.md  __init__.py  conftest.py  test_integration.py  test_runner_standalone.py  test_service.py  test_types.py  test_virtual_desktop.py
tests/data/: bdo_config.json
tests/debugging/: __init__.py  test_breakpoints.py  test_debug_manager.py  test_debug_session.py  (+3 more)
(+1451 files in other folders)
