[tool.poetry]
name = "qontinui"
version = "0.1.0"
description = "Model-based GUI automation with AI-enhanced perception"
authors = ["Your Name <your.email@example.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/qontinui/qontinui"
repository = "https://github.com/qontinui/qontinui"
documentation = "https://qontinui.github.io"
keywords = ["gui", "automation", "ai", "testing", "rpa"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
packages = [{include = "qontinui", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
pynput = "^1.7"
opencv-python-headless = "^4.9"
transformers = "^4.36"
torch = "^2.2"
torchvision = ">=0.17"
segment-anything = {version = "^1.0", optional = true}
accelerate = "^0.25"
timm = "^0.9"
supervision = "^0.26"
tokenizers = "^0.15"
ultralytics = "^8.0"
easyocr = "^1.7"
transitions = "^0.9"
lark = "^1.1"
scikit-learn = "^1.3"
networkx = "^3.2"
faiss-cpu = "^1.7"
numpy = "^1.26,<3.0"
pillow = "^10.2"
pydantic-settings = "^2.0"
python-dotenv = "^1.0"
structlog = "^24.0"
mss = "^9.0"
prometheus-client = "^0.19"
psutil = "^5.9"
sqlalchemy = "^2.0"
pydantic = "^2.11.9"
croniter = "^5.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
pytest-cov = "^5.0"
pytest-asyncio = "^0.23"
black = "^24.0"
ruff = "^0.6"
mypy = "^1.8"
pre-commit = "^3.6"
sphinx = "^7.2"
sphinx-rtd-theme = "^2.0"
pylint = "^3.3.8"
isort = "^6.0.1"
flake8 = "^7.3.0"
tox = "^4.30.2"
types-pyautogui = "^0.9.3.20241230"
types-psutil = "^7.0.0.20250822"
types-pynput = "^1.8.1.20250809"
types-reportlab = "^4.4.4.20250926"
sphinx-autodoc-typehints = ">=1.20,<3.0"
myst-parser = "^4.0.1"
types-pyyaml = "^6.0.12.20250915"

[tool.poetry.extras]
sam = ["segment-anything"]
all = ["segment-anything"]

[tool.poetry.scripts]
brobot-converter = "qontinui.migrations.brobot_converter:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.lint.isort]
known-first-party = ["qontinui"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
plugins = ["pydantic.mypy"]
mypy_path = "src"
namespace_packages = true
explicit_package_bases = true

[[tool.mypy.overrides]]
module = "pydantic"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "qontinui.hal.implementations.mss_capture"
warn_return_any = false
disallow_any_unimported = false

[tool.black]
line-length = 100
target-version = ['py311', 'py312']

[tool.isort]
profile = "black"
line_length = 100

[tool.pylint]
max-line-length = 100
disable = ["C0114", "C0115", "C0116"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--cov=src/qontinui",
    "--cov-report=term-missing",
    "--cov-report=xml",
    "--cov-report=html",
    "-v",
]


[tool.coverage.run]
source = ["src/qontinui"]
omit = ["*/tests/*", "*/__init__.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
    "pass",
    "except ImportError:",
]

# Quality gate configuration for qontinui-devtools
[tool.qontinui-devtools]
# God class detection thresholds
max_god_class_lines = 500
max_god_class_methods = 30
max_lcom = 0.9

# Type coverage requirements
min_type_coverage = 85.0

# Import analysis
allow_circular_dependencies = false

# Baselines (current state as of analysis)
baseline_god_classes_critical = 43
baseline_race_conditions_critical = 474
baseline_security_critical = 20

[tool.qontinui-devtools.security]
# Security scan configuration
fail_on_critical = true
fail_on_high = false
ignore_patterns = ["*/tests/*", "*/examples/*", "*/benchmarks/*"]

# Severity levels to report
report_levels = ["critical", "high", "medium"]

[tool.qontinui-devtools.race-conditions]
# Race condition detection
fail_on_new_critical = true
baseline_critical_count = 474

# Patterns to check
check_patterns = [
    "shared_state_access",
    "unprotected_modification",
    "async_race",
    "thread_race"
]

[tool.qontinui-devtools.architecture]
# Architecture complexity thresholds
max_coupling = 10
max_cyclomatic_complexity = 15
max_dependencies_per_module = 20

# God class thresholds
god_class_line_threshold = 500
god_class_method_threshold = 30
god_class_lcom_threshold = 0.9
