[tool.poetry]
name = "qontinui"
version = "0.1.1"
description = "Model-based GUI automation with AI-enhanced perception"
authors = ["Joshua Spinak <jspinak@alum.mit.edu>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/qontinui/qontinui"
repository = "https://github.com/qontinui/qontinui"
documentation = "https://qontinui.github.io"
keywords = ["gui", "automation", "ai", "testing", "rpa"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
packages = [{include = "qontinui", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
pynput = "^1.7"
pyautogui = "^0.9.54"
opencv-python-headless = "^4.9"
transformers = "^4.46"
torch = "^2.2"
torchvision = ">=0.17"
# SAM3: Install manually with: pip install git+https://github.com/facebookresearch/sam3.git
# (Poetry cannot handle git dependencies without proper packaging)
accelerate = "^0.25"
timm = ">=1.0.22"  # Required by SAM3
supervision = "^0.26"
tokenizers = "^0.20"
ultralytics = "^8.0"
easyocr = "^1.7"
transitions = "^0.9"
lark = "^1.1"
scikit-learn = "^1.3"
networkx = "^3.2"
faiss-cpu = "^1.7"
numpy = "^1.26,<3.0"
pillow = "^11"
pydantic-settings = "^2.0"
python-dotenv = "^1.0"
structlog = "^25.4"
mss = "^9.0"
prometheus-client = "^0.19"
psutil = ">=5.9,<8.0"
sqlalchemy = "^2.0"
pydantic = "^2.11.9"
qontinui-schemas = { path = "../qontinui-schemas", develop = true }
croniter = "^5.0"
playwright = "^1.56.0"
selenium = "^4.38.0"
webdriver-manager = "^4.0.2"
click = "^8.1"
httpx = "^0.28"
aiohttp = "^3.9"  # CDP WebSocket for accessibility capture

# Optional: UI-TARS quantization support (for local inference on consumer GPUs)
bitsandbytes = { version = "^0.45", optional = true }

[tool.poetry.extras]
uitars = ["bitsandbytes"]  # Enable: poetry install -E uitars

[tool.poetry.scripts]
qontinui = "qontinui.cli.main:main"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
pytest-cov = "^5.0"
pytest-asyncio = "^0.24"
black = "^24.10"
ruff = "^0.14"
mypy = "^1.14"
pre-commit = "^4.4"
sphinx = "^7.2"
sphinx-rtd-theme = "^2.0"
pylint = "^3.3.8"
isort = "^6.0"
flake8 = "^7.3.0"
tox = "^4.30.2"
types-pyautogui = "^0.9.3.20241230"
types-psutil = "^7.0.0.20250822"
types-pynput = "^1.8.1.20250809"
types-reportlab = "^4.4.4.20250926"
sphinx-autodoc-typehints = ">=1.20,<3.0"
myst-parser = "^4.0.1"
types-pyyaml = "^6.0.12.20250915"

# Note: SAM3 must be installed manually (see README for instructions)
# Poetry extras removed since SAM3 cannot be installed via poetry
types-requests = "^2.32.4.20250913"
bandit = "^1.9.2"
respx = "^0.22"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.lint.per-file-ignores]
# Late imports in multistate_integration are intentional (after sys.path manipulation)
"src/qontinui/multistate_integration/*.py" = ["E402"]
# Late imports in config/transition_loader for debug helper function
"src/qontinui/config/transition_loader.py" = ["E402"]
# Late imports in tests are intentional (after sys.path manipulation)
# Late imports in actions are intentional (to break circular imports)
"src/qontinui/actions/*.py" = ["E402"]
"src/qontinui/actions/**/*.py" = ["E402"]
# Late imports in tests are intentional (after sys.path manipulation)
"tests/**/*.py" = ["E402", "B011", "B017", "F841"]

[tool.ruff.lint.isort]
known-first-party = ["qontinui"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
plugins = ["pydantic.mypy"]
# For src-layout projects, use mypy_path to set the import root
# IMPORTANT: Run mypy as `mypy -p qontinui` or `mypy src/qontinui`, NOT `mypy .`
# Running `mypy .` causes "Source file found twice" due to path resolution conflicts
mypy_path = "src"
namespace_packages = true
explicit_package_bases = true
disable_error_code = ["import-untyped"]
# Exclude everything except src/ to prevent "Source file found twice" when running `mypy .`
exclude = ["tests", "docs", "scripts", "examples", "benchmarks"]
# Only check the qontinui package
packages = ["qontinui"]

[[tool.mypy.overrides]]
module = "pydantic"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "qontinui.hal.implementations.mss_capture"
warn_return_any = false
disallow_any_unimported = false

# Disable strict checking for extraction modules with complex union types
[[tool.mypy.overrides]]
module = "qontinui.extraction.*"
warn_return_any = false
strict = false
ignore_errors = true

[tool.black]
line-length = 100
target-version = ['py311', 'py312']

[tool.isort]
profile = "black"
line_length = 100

[tool.pylint]
max-line-length = 100
disable = ["C0114", "C0115", "C0116"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--cov=src/qontinui",
    "--cov-report=term-missing",
    "--cov-report=xml",
    "--cov-report=html",
    "-v",
]


[tool.coverage.run]
source = ["src/qontinui"]
omit = ["*/tests/*", "*/__init__.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
    "pass",
    "except ImportError:",
]

# Quality gate configuration for qontinui-devtools
[tool.qontinui-devtools]
# God class detection thresholds
max_god_class_lines = 500
max_god_class_methods = 30
max_lcom = 0.9

# Type coverage requirements
min_type_coverage = 85.0

# Import analysis
allow_circular_dependencies = false

# Baselines (current state as of analysis)
baseline_god_classes_critical = 43
baseline_race_conditions_critical = 474
baseline_security_critical = 20

[tool.qontinui-devtools.security]
# Security scan configuration
fail_on_critical = true
fail_on_high = false
ignore_patterns = ["*/tests/*", "*/examples/*", "*/benchmarks/*"]

# Severity levels to report
report_levels = ["critical", "high", "medium"]

[tool.qontinui-devtools.race-conditions]
# Race condition detection
fail_on_new_critical = true
baseline_critical_count = 474

# Patterns to check
check_patterns = [
    "shared_state_access",
    "unprotected_modification",
    "async_race",
    "thread_race"
]

[tool.qontinui-devtools.architecture]
# Architecture complexity thresholds
max_coupling = 10
max_cyclomatic_complexity = 15
max_dependencies_per_module = 20

# God class thresholds
god_class_line_threshold = 500
god_class_method_threshold = 30
god_class_lcom_threshold = 0.9
